FWF-4817 [feature] implemented process diagram with task history and overflow fix in analyze table

--- a/forms-flow-theme/scss/_modal.scss
+++ b/forms-flow-theme/scss/_modal.scss
@@ -1271,3 +1271,10 @@ $black-color: var(--ff-black);
     overflow-y: auto;
   }
 }
+
+.vertical-hr{
+    position: absolute;
+    width: 2px;
+    background-color: var(--ff-gray-medium-dark) !important;
+}
+ 
